--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <section id="team">
       <div class="container">
         <div class="section-header">
-          <h3>Core Team</h3>
+          <h3>Management Team</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
 
@@ -293,7 +293,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Drew Stone</h4>
-                  <span>CTO</span>
+                  <span>Chief Technology Officer</span>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
@@ -325,7 +325,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ahmad Jawaid</h4>
-                  <span>COO</span>
+                  <span>Chief Operating Officer</span>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
@@ -343,7 +343,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Zabi Mohebzada</h4>
-                  <span>Head of Marketing</span>
+                  <span>Head of Sales</span>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/zabi-mohebzada-59008811b/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
