--- a/careers.html
+++ b/careers.html
@@ -41,15 +41,15 @@
 
             <div class="logo float-left">
                 <!-- Uncomment below if you prefer to use an image logo -->
-                <h1 class="text-light"><a href="index.html"><span>SEED<span class="sp">CODE</a></h1>
+                <h1 class="text-light"><a href="/"><span>SEED<span class="sp">CODE</a></h1>
             </div>
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="index.html#portfolio">Portfolio</a></li>
-                    <li><a href="index.html#team">Team</a></li>
-                    <li><a href="careers.html">Careers</a></li>
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/#portfolio">Portfolio</a></li>
+                    <li><a href="/#team">Team</a></li>
+                    <li><a href="https://seedcode.io/careers">Careers</a></li>
                 </ul>
             </nav><!-- .main-nav -->
 
