--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <div class="container">
 
       <div class="intro-info">
+        <h2 style="font-size: 30px;">SEED<span style="font-weight: 400">CODE</h2>
         <h2 class="">Join the world’s largest startup community</h2>
         <p class="">Experience the startup ecosystem — invest in startups, research the
           fastest-growing
@@ -142,7 +143,7 @@
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">18</span>
+            <span data-toggle="counter-up">21</span>
             <p>Engineers</p>
           </div>
 
