--- a/index.html
+++ b/index.html
@@ -299,7 +299,6 @@
       <div class="container">
         <div class="section-header">
           <h3>Management Team</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
 
         <div class="row px-5">
@@ -310,6 +309,9 @@
                 <div class="member-info-content">
                   <h4>Drew Stone</h4>
                   <span>Chief Technology Officer</span>
+                  <p>Founder of Commonwealth Labs, Founder of Baire Group Bachelors in Networks Engineering and Masters
+                    in Math at the University of Pennsylvania Candidate for PhD in Computer Science at the Hebrew
+                    University of Jerusalem</p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
@@ -326,6 +328,9 @@
                 <div class="member-info-content">
                   <h4>Rabeel Jawaid</h4>
                   <span>Chief Executive Officer</span>
+                  <p>General Partner at Providus Ventures, Providus Investments, and Providus Capital. Dual Bachelors in
+                    Physics and Electrical Engineering, and Masters in Systems Engineering at the University of
+                    Pennsylvania.</p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/rabeeljawaid/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
@@ -342,6 +347,9 @@
                 <div class="member-info-content">
                   <h4>Ahmad Jawaid</h4>
                   <span>Chief Operating Officer</span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
@@ -360,6 +368,9 @@
                 <div class="member-info-content">
                   <h4>Zabi Mohebzada</h4>
                   <span>Head of Sales</span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/zabi-mohebzada-59008811b/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
