new job listings

--- a/careers.html
+++ b/careers.html
@@ -127,6 +127,51 @@
                     <div class="card-header" id="headingThree">
                         <div class="spread">
                             <button class="btn collapsed" type="button" data-toggle="collapse" style="font-weight: 500;"
+                                data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                Fullstack Developer
+                            </button>
+                            <span>San Francisco, US</span>
+                        </div>
+                    </div>
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingPe" data-parent="#accordionExample">
+                        <div class="card-body p-5">
+                            <h6>Education</h6>
+                            <ul>
+                                <li>Bachelor’s degree or higher in Computer
+                                    Engineering, Computer Science or related field.</li>
+                            </ul>
+                            <h6>Skills & Experience</h6>
+                            <ul class="details_list">
+                                <li>Experience in Software and System Architecture design</li>
+                                <li>Hands-on experience with web development in any of the following languages: Python,
+                                    Go, C#, JavaScript (Node, Angular)</li>
+                                <li>Experience with back-end development and relational databases (Postgres, MySQL,
+                                    Oracle, etc.)</li>
+                                <li>Experience with open source technologies and NoSQL DB technology such as Couchbase,
+                                    Elasticsearch, RabbitMQ, MongoDB, Cassandra, Redis, etc.</li>
+                                <li>Proven ability with cloud technologies such as Amazon Web Services (not just EC2)
+                                    and/or Azure.</li>
+                                <li>Ability to work with Project Managers to develop task-level project plans and
+                                    proposals</li>
+                                <li>Ability to develop secure solutions and knowledge of industry best practices
+                                    regarding information security</li>
+                                <li>Excellent oral and written communication</li>
+                                <li>Self-motivation and the ability to work under minimal supervision</li>
+                                <li>Strong understanding of cross-browser compatibility and limitation issues</li>
+                                <li>Experience with Modern UI Frameworks (e.g. React, Vue, Angular) and Flux UI
+                                    architecture</li>
+                                <li>Experience with cloud provider services and container technologies (e.g. AWS, MS
+                                    Azure, Chef, Docker, Google App Engine)</li>
+                                <li>Working knowledge of Web Services and RESTful architecture</li>
+                                <li>Experience working on teams using agile development techniques</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <div class="spread">
+                            <button class="btn collapsed" type="button" data-toggle="collapse" style="font-weight: 500;"
                                 data-target="#collapse01" aria-expanded="false" aria-controls="collapse01">
                                 Sales Executive
                             </button>
@@ -158,6 +203,57 @@
                                 <li>GREAT attitude</li>
                                 <li>Excellent communication skills verbal and written – experience creating tailored
                                     client proposals</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <div class="spread">
+                            <button class="btn collapsed" type="button" data-toggle="collapse" style="font-weight: 500;"
+                                data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Solutions Architect
+                            </button>
+                            <span>Toronto, CA</span>
+                        </div>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                        data-parent="#accordionExample">
+                        <div class="card-body p-5">
+                            <p> We're looking for a candidate with 5 or more years of experience in successfully driving
+                                software development activities, architecting
+                                and creating technical specifications, technical leadership and mentoring. Our ideal
+                                candidate will be
+                                skilled at working in Agile environments with off-shore and
+                                cross-functional teams, is dedicated to customer satisfaction, has high-energy with a
+                                positive attitude, and is proactive, organized, and detail-oriented.</p>
+                            <h6>Education</h6>
+                            <ul>
+                                <li>Bachelor’s’ degree or higher in Computer
+                                    Engineering, Computer Science or related field.</li>
+                            </ul>
+                            <h6>Skills & Experience</h6>
+                            <ul>
+                                <li>Strong skill sets in Software or System Architecture design</li>
+                                <li>Hands-on experience with software development in one or more of the following
+                                    languages: Python, Java, Go, C#, JavaScript/Typescript (Node/Angular)</li>
+                                <li>Experience with back-end development and relational databases (Postgres, MySQL,
+                                    Oracle, Sql Server, etc.)</li>
+                                <li>Experience in open source technologies and NoSQL DB technology such as MongoDB,
+                                    Couchbase, Elasticsearch, RabbitMQ, Cassandra, Redis, etc.</li>
+                                <li>Understanding of tiered architectures, Service Orientation and Microservices</li>
+                                <li>Professional or personal experience with public cloud providers (Amazon Web Service,
+                                    Microsoft Azure, Google Cloud Platform)</li>
+                                <li>Experience with creating and integrating well documented web services (SOAP or
+                                    REST).</li>
+                                <li>Strong knowledge of application-profiling and performance-tuning</li>
+                                <li>Experience and understanding of Agile and Scrum process and concepts</li>
+                                <li>Ability to estimate software development effort given a set of requirements and
+                                    assumptions</li>
+                                <li>Ability to work with Project Managers to technical implementation plans</li>
+                                <li>Ability to develop secure solutions and knowledge of industry best practices
+                                    regarding information security</li>
+                                <li>Excellent oral and written communication skills</li>
                             </ul>
                         </div>
                     </div>
@@ -244,57 +340,6 @@
                                     their role in a commercial environment.</li>
                                 <li>Demonstrated ability to multitask, prioritize, and manage time efficiently</li>
                                 <li>Demonstrated verbal and written communication skills</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header" id="headingThree">
-                        <div class="spread">
-                            <button class="btn collapsed" type="button" data-toggle="collapse" style="font-weight: 500;"
-                                data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Solutions Architect
-                            </button>
-                            <span>Karachi, Pakistan</span>
-                        </div>
-                    </div>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                        data-parent="#accordionExample">
-                        <div class="card-body p-5">
-                            <p> We're looking for a candidate with 5 or more years of experience in successfully driving
-                                software development activities, architecting
-                                and creating technical specifications, technical leadership and mentoring. Our ideal
-                                candidate will be
-                                skilled at working in Agile environments with off-shore and
-                                cross-functional teams, is dedicated to customer satisfaction, has high-energy with a
-                                positive attitude, and is proactive, organized, and detail-oriented.</p>
-                            <h6>Education</h6>
-                            <ul>
-                                <li>Bachelor’s’ degree or higher in Computer
-                                    Engineering, Computer Science or related field.</li>
-                            </ul>
-                            <h6>Skills & Experience</h6>
-                            <ul>
-                                <li>Strong skill sets in Software or System Architecture design</li>
-                                <li>Hands-on experience with software development in one or more of the following
-                                    languages: Python, Java, Go, C#, JavaScript/Typescript (Node/Angular)</li>
-                                <li>Experience with back-end development and relational databases (Postgres, MySQL,
-                                    Oracle, Sql Server, etc.)</li>
-                                <li>Experience in open source technologies and NoSQL DB technology such as MongoDB,
-                                    Couchbase, Elasticsearch, RabbitMQ, Cassandra, Redis, etc.</li>
-                                <li>Understanding of tiered architectures, Service Orientation and Microservices</li>
-                                <li>Professional or personal experience with public cloud providers (Amazon Web Service,
-                                    Microsoft Azure, Google Cloud Platform)</li>
-                                <li>Experience with creating and integrating well documented web services (SOAP or
-                                    REST).</li>
-                                <li>Strong knowledge of application-profiling and performance-tuning</li>
-                                <li>Experience and understanding of Agile and Scrum process and concepts</li>
-                                <li>Ability to estimate software development effort given a set of requirements and
-                                    assumptions</li>
-                                <li>Ability to work with Project Managers to technical implementation plans</li>
-                                <li>Ability to develop secure solutions and knowledge of industry best practices
-                                    regarding information security</li>
-                                <li>Excellent oral and written communication skills</li>
                             </ul>
                         </div>
                     </div>
