--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           companies, and find a job
           you love.</p>
         <div class="">
-          <a href="#about" class="btn-main scrollto">Get Started</a>
+          <a href="#about" class="btn-main scrollto">Learn More</a>
           <a href="#portfolio" class="btn-main scrollto">Portfolio</a>
         </div>
       </div>
@@ -301,20 +301,29 @@
           <h3>Management Team</h3>
         </div>
 
-        <div class="row px-5">
+        <div class="row ">
+
+
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
-              <img src="img/team-2.jpeg" class="img-fluid" alt="">
+              <img src="img/team-1.jpg" class="img-fluid" alt="" data-wow-delay="0.1s">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Drew Stone</h4>
-                  <span>Chief Technology Officer</span>
-                  <p>Founder of Commonwealth Labs, Founder of Baire Group Bachelors in Networks Engineering and Masters
-                    in Math at the University of Pennsylvania Candidate for PhD in Computer Science at the Hebrew
-                    University of Jerusalem</p>
+                  <h4>Rabeel Jawaid</h4>
+                  <span>Founder, Chief Executive Officer</span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    B.A. in Physics @ UPENN <br />
+                    B.S. in Electrical Engineering @ UPENN <br />
+                    Masters in Systems Engineering @ UPENN <br />
+
+                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
+                    General Partner @ Providus Ventures and Providus Capital <br />
+                  </p>
+
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/rabeeljawaid/" target="_blank"><i
+                        class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -323,17 +332,25 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
-              <img src="img/team-1.jpg" class="img-fluid" alt="" data-wow-delay="0.1s">
+              <img src="img/team-2.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Rabeel Jawaid</h4>
-                  <span>Chief Executive Officer</span>
-                  <p>General Partner at Providus Ventures, Providus Investments, and Providus Capital. Dual Bachelors in
-                    Physics and Electrical Engineering, and Masters in Systems Engineering at the University of
-                    Pennsylvania.</p>
+                  <h4>Drew Stone</h4>
+                  <span>Chief Technology Officer</span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    Founder @ BaireGroup <br />
+                    B.S. in Networks Engineering @ UPENN <br />
+                    Masters in Math @ UPENN <br />
+
+                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
+                    Founder @ Commonwealth Labs<br />
+                    Candidate for PhD in Computer Science @ Hebrew
+                    University of Jerusalem
+                  </p>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/rabeeljawaid/" target="_blank"><i
-                        class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -346,10 +363,15 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ahmad Jawaid</h4>
-                  <span>Chief Operating Officer</span>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                  <span>VP, Engineering</span>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    B.A. in Computer Science @ UC Berkeley <br />
+                    SWE Lead @ Tarjimly, Y Combinator W'18
+
+                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
+                    General Partner @ Providus Ventures <br /> General Partner @ Vitality Capital <br />
+                  </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
@@ -368,9 +390,13 @@
                 <div class="member-info-content">
                   <h4>Zabi Mohebzada</h4>
                   <span>Head of Sales</span>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                  <p>
+                    <span style="font-weight: 600; font-style: normal;">Previously</span>
+                    B.A. in Biology @ UWO <br />
+
+                    <!-- <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
+                    General Partner @ Providus Ventures <br /> General Partner @ Vitality Capital <br /> -->
+                  </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/zabi-mohebzada-59008811b/" target="_blank"><i
                         class="fa fa-linkedin"></i></a>
