--- a/careers.html
+++ b/careers.html
@@ -76,7 +76,7 @@
     <section id="positions">
         <div class="container">
             <header class="section-header">
-                <h3>We're Hiring!</h3>
+                <h3 class="mt-mobile">We're Hiring!</h3>
                 <P> We are an equal opportunity employer and are committed to maintaining a diverse workplace.
                     If you're interested, please reach out to us at <a
                         href="mailto:recruitment@seedcode.io">recruitment@seedcode.io</a> with the job title in the
