--- a/index.html
+++ b/index.html
@@ -164,6 +164,25 @@
         <header class="section-header">
           <h3 class="">Portfolio</h3>
         </header>
+        <h4 class="h4"> Our Latest Project</h4>
+        <p class="portfolio-highlight">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.
+        </p>
+        <button class="btn ph-btn" type="button" data-toggle="collapse" data-target="#collapseExample"
+          aria-expanded="false" aria-controls="collapseExample">
+          See What We Built
+        </button>
+        <div class="collapse" id="collapseExample">
+          <div class="embed-responsive embed-responsive-16by9 p-5">
+            <video width="320" height="240" controls>
+              <source src="video/VIDEO-2020-01-02-18-35-45.mp4" class="embed-responsive-item auto" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
+
 
         <div class="row">
           <div class="col-lg-12">
